--- a/css/style.css
+++ b/css/style.css
@@ -25,5 +25,9 @@ video{
     background-size: cover;
 }
 body> div.content{
+    background-color: black;
+    opacity: 0.7;
+    z-index: 0;
     position: relative;
+    color: red;
 }
