--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,24 @@
-body>nav{
-    opacity: 1;
+nav>ul{
+    opacity: 0.7;
     background: black;
-    
+    z-index: 1;
     border: 20px antiquewhite;
 }
 body{
-    opacity: 1;
     background: 0px;
     color: rgb(17,17,17);
 }
-/* 
+
+h3> a{
+    color: snow;
+    z-index: 1;
+}
 h3{
-    color:gold;
-} */
+    color: seashell;
+
+}
 video{
+    z-index: -1;
     position: fixed;
     top:0;
     right: 0;
@@ -30,4 +35,6 @@ body> div.content{
     z-index: 0;
     position: relative;
     color: red;
+}
+body> div.content>div{
 }
