--- a/css/style.css
+++ b/css/style.css
@@ -28,15 +28,28 @@ video{
 .content{
     overflow:auto;
     left: 5%;
-    width: 100%;
-    background-color: black;
-    opacity: 0.7;
+    width: 90%;
+    /* background-color: black;
+    opacity: 0.7; */
     z-index: 1;
     position: relative;
     color: seashell;
 }
-body> div.content>div{
-    float: left;
+body> div.content>div.background{
     left: 5%;
+    width: 90%;
+    height: 600px;
+    background-color: black;
+    opacity: 0.7;
+    z-index: 0;
+
+}
+body> div.content>div.background>div{
+    z-index: 2;
+    opacity: 1;
+    float: left;
+    left: 15px;
     width: 30%;
+    border: 2px seashell;
+
 }
